--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,6 +24,7 @@
   <!-- 登录页 -->
   <string name="login_label_username">用户名</string>
   <string name="login_label_password">密码</string>
+  <string name="login_label_cookie">Cookie</string>
   <string name="login_label_signin">登录</string>
   <string name="login_label_autologin">自动登录</string>
   <string name="login_register_link">没有帐号？  <a href="http://www.newsmth.net/bbsreg0.html">注册</a></string>
